[metadata]
name = VisualPIC
version = attr: visualpic.__version__
description = Data visualizer for PIC codes
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/AngelFP/VisualPIC
author = Angel Ferran Pousa
author_email = angel.ferran.pousa@desy.de,
license = GPLv3
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Visualization
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =.
install_requires =
    numpy
    scipy
    h5py
    matplotlib
    aptools>=0.1.25
    openpmd-viewer>=1.2.0, !=1.4.0
    tqdm
python_requires = >=3.7

[options.packages.find]
where = .

[options.package_data]
visualpic =
  ui/*.ui
  ui/icons/*
  visualization/assets/vtk_visualizer/colormaps/*.h5
  visualization/assets/vtk_visualizer/opacities/*.h5

[options.extras_require]
test =
    pytest
    flake8
    pyvista

[options.entry_points]
console_scripts =
    vpic = visualpic.cli.vpic:vpic
    vpic3d = visualpic.cli.vpic3d:vpic3d
